# pdfsplitter

./: README.md  main.py  pyproject.toml
.github/workflows/: test.yml
pdfsplitter/: __init__.py  cli.py  splitter.py
tests/: test_splitter.py
