[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdfsplitter"
version = "0.1.0"
description = "Split a PDF into individual pages"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyPDF2"
]

[project.scripts]
pdfsplitter = "main:main"
